Fixed overflowing

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1051,7 +1051,7 @@
   }
 
   .error {
-    margin-top: 650px;
+    margin-top: 800px;
   }
 
   .foot li {
